updated modal markup, fixed tabs markup, fixed tabs styles

--- a/general-landing.html
+++ b/general-landing.html
@@ -279,8 +279,9 @@
                                     </div>
                                 </div>
                                 <div class="text-center m-b">
-                                    <a href="javascript:;" role="button" data-toggle="collapse"
-                                        data-parent="#collapseCALHR" aria-expanded="false" data-target=".collapseCALHR">
+                                    <a href="javascript:;" role="button" data-bs-toggle="collapse"
+                                        data-parent="#collapseCALHR" aria-expanded="false"
+                                        data-bs-target=".collapseCALHR">
                                         <span class="toggle-more"></span><span class="sr-only">Open</span>
                                     </a>
                                 </div>
@@ -345,8 +346,8 @@
                                     </div>
                                 </div>
                                 <div class="text-center m-b">
-                                    <a href="javascript:;" role="button" data-toggle="collapse"
-                                        data-parent="#collapseEDD" aria-expanded="false" data-target=".collapseEDD">
+                                    <a href="javascript:;" role="button" data-bs-toggle="collapse"
+                                        data-parent="#collapseEDD" aria-expanded="false" data-bs-target=".collapseEDD">
                                         <span class="toggle-more"></span><span class="sr-only">Open</span>
                                     </a>
                                 </div>
@@ -414,8 +415,9 @@
                                     </div>
                                 </div>
                                 <div class="text-center m-b">
-                                    <a href="javascript:;" role="button" data-toggle="collapse"
-                                        data-parent="#collapseSCIF" aria-expanded="false" data-target=".collapseSCIF">
+                                    <a href="javascript:;" role="button" data-bs-toggle="collapse"
+                                        data-parent="#collapseSCIF" aria-expanded="false"
+                                        data-bs-target=".collapseSCIF">
                                         <span class="toggle-more"></span><span class="sr-only">Open</span>
                                     </a>
                                 </div>
@@ -479,8 +481,9 @@
                                     </div>
                                 </div>
                                 <div class="text-center m-b">
-                                    <a href="javascript:;" role="button" data-toggle="collapse"
-                                        data-parent="#collapse5678" aria-expanded="false" data-target=".collapse5678">
+                                    <a href="javascript:;" role="button" data-bs-toggle="collapse"
+                                        data-parent="#collapse5678" aria-expanded="false"
+                                        data-bs-target=".collapse5678">
                                         <span class="toggle-more"></span><span class="sr-only">Open</span>
                                     </a>
                                 </div>
