--- a/sample/cards.html
+++ b/sample/cards.html
@@ -75,15 +75,17 @@
                         <h2 class="h3">Example:</h2>
                         <!--#include virtual="/sample/modules/cards.html" -->
                         <!-- Trigger the modal with a button -->
-                        <button type="button" class="btn btn-default btn-sm m-t" data-toggle="modal"
-                            data-target="#cards">Show Source Code</button>
+                        <button type="button" class="btn btn-default btn-sm m-t" data-bs-toggle="modal"
+                            data-bs-target="#cards">Show Source Code</button>
                         <!-- Modal -->
                         <div class="modal fade" id="cards" role="dialog">
                             <div class="modal-dialog modal-lg">
                                 <div class="modal-content">
                                     <div class="modal-header">
                                         <h4 class="modal-title">HTML Markup</h4>
-                                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                        <button type="button" class="close btn btn-secondary"
+                                            data-bs-dismiss="modal"><span class="sr-only">Close modal</span><span
+                                                class="ca-gov-icon-close-mark" aria-hidden="true"></span></button>
                                     </div>
                                     <div class="modal-body">
                                         <h4>Source Code:</h4>
@@ -91,7 +93,7 @@
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-default"
-                                            data-dismiss="modal">Close</button>
+                                            data-bs-dismiss="modal">Close</button>
                                     </div>
                                 </div>
                             </div>
@@ -103,14 +105,16 @@
                         <p><code>.card-img-top</code> places an image to the top of the card.</p>
                         <!--#include virtual="/sample/modules/card-image.html" -->
                         <!-- Trigger the modal with a button -->
-                        <button type="button" class="btn btn-default btn-sm m-t" data-toggle="modal"
-                            data-target="#card-image">Show Source Code</button>
+                        <button type="button" class="btn btn-default btn-sm m-t" data-bs-toggle="modal"
+                            data-bs-target="#card-image">Show Source Code</button>
                         <div class="modal fade" id="card-image" role="dialog">
                             <div class="modal-dialog modal-lg">
                                 <div class="modal-content">
                                     <div class="modal-header">
                                         <h3 class="h4 modal-title">HTML Markup</h3>
-                                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                        <button type="button" class="close btn btn-secondary"
+                                            data-bs-dismiss="modal"><span class="sr-only">Close modal</span><span
+                                                class="ca-gov-icon-close-mark" aria-hidden="true"></span></button>
                                     </div>
                                     <div class="modal-body">
                                         <h3 class="h4">Source Code:</h3>
@@ -118,7 +122,7 @@
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-default"
-                                            data-dismiss="modal">Close</button>
+                                            data-bs-dismiss="modal">Close</button>
                                     </div>
                                 </div>
                             </div>
@@ -142,26 +146,28 @@
 
                 <hr>
 
-                <h2>Card decks</h2>
-                <p>Need a set of equal width and height cards that aren’t attached to one another? Use card decks.</p>
+                <h2>Grid cards</h2>
+                <p>Need a set of equal width and height cards that aren’t attached to one another? Use Grid cards.</p>
 
                 <!--#include virtual="/sample/modules/card-deck.html" -->
                 <!-- Trigger the modal with a button -->
-                <button type="button" class="btn btn-default btn-sm m-t" data-toggle="modal"
-                    data-target="#card-deck">Show Source Code</button>
+                <button type="button" class="btn btn-default btn-sm m-t" data-bs-toggle="modal"
+                    data-bs-target="#card-deck">Show Source Code</button>
                 <div class="modal fade" id="card-deck" role="dialog">
                     <div class="modal-dialog modal-lg">
                         <div class="modal-content">
                             <div class="modal-header">
                                 <h3 class="h4 modal-title">HTML Markup</h3>
-                                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                <button type="button" class="close btn btn-secondary" data-bs-dismiss="modal"><span
+                                        class="sr-only">Close modal</span><span class="ca-gov-icon-close-mark"
+                                        aria-hidden="true"></span></button>
                             </div>
                             <div class="modal-body">
                                 <h3 class="h4">Source Code:</h3>
                                 <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/card-deck.html" --></code></pre>
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-default" data-bs-dismiss="modal">Close</button>
                             </div>
                         </div>
                     </div>
@@ -180,21 +186,23 @@
 
                 <!--#include virtual="/sample/modules/card-photo.html" -->
                 <!-- Trigger the modal with a button -->
-                <button type="button" class="btn btn-default btn-sm m-t" data-toggle="modal"
-                    data-target="#card-photo">Show Source Code</button>
+                <button type="button" class="btn btn-default btn-sm m-t" data-bs-toggle="modal"
+                    data-bs-target="#card-photo">Show Source Code</button>
                 <div class="modal fade" id="card-photo" role="dialog">
                     <div class="modal-dialog modal-lg">
                         <div class="modal-content">
                             <div class="modal-header">
                                 <h3 class="h4 modal-title">HTML Markup</h3>
-                                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                <button type="button" class="close btn btn-secondary" data-bs-dismiss="modal"><span
+                                        class="sr-only">Close modal</span><span class="ca-gov-icon-close-mark"
+                                        aria-hidden="true"></span></button>
                             </div>
                             <div class="modal-body">
                                 <h3 class="h4">Source Code:</h3>
                                 <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/card-photo.html" --></code></pre>
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-default" data-bs-dismiss="modal">Close</button>
                             </div>
                         </div>
                     </div>
