--- a/sample/countdown.html
+++ b/sample/countdown.html
@@ -112,15 +112,17 @@
 
 
                 <!-- Trigger the modal with a button -->
-                <button type="button" class="btn btn-default btn-sm m-t-md" data-toggle="modal"
-                    data-target="#countdown1">Show Source Code</button>
+                <button type="button" class="btn btn-default btn-sm m-t-md" data-bs-toggle="modal"
+                    data-bs-target="#countdown1">Show Source Code</button>
                 <!-- Modal -->
                 <div class="modal fade" id="countdown1" role="dialog">
                     <div class="modal-dialog modal-lg">
                         <div class="modal-content">
                             <div class="modal-header">
                                 <h3 class="h4 modal-title">HTML Markup</h3>
-                                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                <button type="button" class="close btn btn-secondary" data-bs-dismiss="modal"><span
+                                        class="sr-only">Close modal</span><span class="ca-gov-icon-close-mark"
+                                        aria-hidden="true"></span></button>
                             </div>
                             <div class="modal-body">
                                 <h3 class="h4">Source Code:</h3>
@@ -129,10 +131,10 @@
                                     <span class="ca-gov-icon-favorite"></span>
                                     <!-- Nav tabs - NOTE: UNIQUE ID IS REQUIRED -->
                                     <ul class="nav nav-tabs responsive" role="tablist" id="primary">
-                                        <li class="nav-item" role="tab"><a href="#html" data-toggle="tab"
+                                        <li class="nav-item" role="tab"><a href="#html" data-bs-toggle="tab"
                                                 class="nav-link active">HTML <span class="sr-only"> for countdown
                                                     primary</span></a></li>
-                                        <li class="nav-item" role="tab"><a href="#scirpt" data-toggle="tab"
+                                        <li class="nav-item" role="tab"><a href="#scirpt" data-bs-toggle="tab"
                                                 class="nav-link">Script <span class="sr-only"> for countdown
                                                     primary</span></a></li>
 
@@ -199,7 +201,7 @@
                                 </div>
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-default" data-bs-dismiss="modal">Close</button>
                             </div>
                         </div>
                     </div>
@@ -234,15 +236,17 @@
 
 
                 <!-- Trigger the modal with a button -->
-                <button type="button" class="btn btn-default btn-sm m-t-md" data-toggle="modal"
-                    data-target="#countdown2">Show Source Code</button>
+                <button type="button" class="btn btn-default btn-sm m-t-md" data-bs-toggle="modal"
+                    data-bs-target="#countdown2">Show Source Code</button>
                 <!-- Modal -->
                 <div class="modal fade" id="countdown2" role="dialog">
                     <div class="modal-dialog modal-lg">
                         <div class="modal-content">
                             <div class="modal-header">
                                 <h3 class="h4 modal-title">HTML Markup</h3>
-                                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                <button type="button" class="close btn btn-secondary" data-bs-dismiss="modal"><span
+                                        class="sr-only">Close modal</span><span class="ca-gov-icon-close-mark"
+                                        aria-hidden="true"></span></button>
                             </div>
                             <div class="modal-body">
                                 <h3 class="h4">Source Code:</h3>
@@ -251,10 +255,10 @@
                                     <span class="ca-gov-icon-favorite"></span>
                                     <!-- Nav tabs - NOTE: UNIQUE ID IS REQUIRED -->
                                     <ul class="nav nav-tabs responsive" role="tablist" id="default">
-                                        <li class="nav-item" role="tab"><a href="#html2" data-toggle="tab"
+                                        <li class="nav-item" role="tab"><a href="#html2" data-bs-toggle="tab"
                                                 class="nav-link active">HTML <span class="sr-only"> for countdown
                                                     default</span></a></li>
-                                        <li class="nav-item" role="tab"><a href="#scirpt2" data-toggle="tab"
+                                        <li class="nav-item" role="tab"><a href="#scirpt2" data-bs-toggle="tab"
                                                 class="nav-link">Script <span class="sr-only"> for countdown
                                                     default</span></a></li>
 
@@ -321,7 +325,7 @@ if (distance < 0) {
                                 </div>
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-default" data-bs-dismiss="modal">Close</button>
                             </div>
                         </div>
                     </div>
