--- a/sample/layout-faq.html
+++ b/sample/layout-faq.html
@@ -86,7 +86,7 @@
                             <div class="panel panel-default">
                                 <div class="panel-heading" role="tab" id="headingOne">
                                     <h4 class="panel-title">
-                                        <a class="collapsed" data-toggle="collapse" data-parent="#example-accordion"
+                                        <a class="collapsed" data-bs-toggle="collapse" data-parent="#example-accordion"
                                             href="#collapseOne" aria-controls="collapseOne">How do i get started?</a>
                                     </h4>
                                 </div>
@@ -104,7 +104,7 @@
                             <div class="panel panel-default">
                                 <div class="panel-heading" role="tab" id="headingTwo">
                                     <h4 class="panel-title">
-                                        <a class="collapsed" data-toggle="collapse" data-parent="#example-accordion"
+                                        <a class="collapsed" data-bs-toggle="collapse" data-parent="#example-accordion"
                                             href="#collapseTwo" aria-controls="collapseTwo">What what essential files do
                                             i need for clean State Tempale template?</a>
                                     </h4>
@@ -130,7 +130,7 @@
                             <div class="panel panel-default">
                                 <div class="panel-heading" role="tab" id="headingThree">
                                     <h4 class="panel-title">
-                                        <a class="collapsed" data-toggle="collapse" data-parent="#example-accordion"
+                                        <a class="collapsed" data-bs-toggle="collapse" data-parent="#example-accordion"
                                             href="#collapseThree" aria-controls="collapseThree">What do I need to make
                                             server side includes (SSI) to work?</a>
                                     </h4>
@@ -154,7 +154,7 @@
                             <div class="panel panel-default">
                                 <div class="panel-heading" role="tab" id="heading4">
                                     <h4 class="panel-title">
-                                        <a class="collapsed" data-toggle="collapse" data-parent="#example-accordion1"
+                                        <a class="collapsed" data-bs-toggle="collapse" data-parent="#example-accordion1"
                                             href="#collapse4" aria-controls="collapse4">How can I clone State Template
                                             from GitHub and bring it into my Visual Studio?</a>
                                     </h4>
@@ -184,7 +184,7 @@
                             <div class="panel panel-default">
                                 <div class="panel-heading" role="tab" id="heading5">
                                     <h4 class="panel-title">
-                                        <a class="collapsed" data-toggle="collapse" data-parent="#example-accordion1"
+                                        <a class="collapsed" data-bs-toggle="collapse" data-parent="#example-accordion1"
                                             href="#collapse5" aria-controls="collapse5">How do I set up local Docker
                                             container?</a>
                                     </h4>
@@ -206,7 +206,7 @@
                             <div class="panel panel-default">
                                 <div class="panel-heading" role="tab" id="heading6">
                                     <h4 class="panel-title">
-                                        <a class="collapsed" data-toggle="collapse" data-parent="#example-accordion1"
+                                        <a class="collapsed" data-bs-toggle="collapse" data-parent="#example-accordion1"
                                             href="#collapse6" aria-controls="collapse6">Do I need to bring a boostrap
                                             library on top of State template?</a>
                                     </h4>
@@ -229,7 +229,7 @@
                             <div class="panel panel-default">
                                 <div class="panel-heading" role="tab" id="heading7">
                                     <h4 class="panel-title">
-                                        <a class="collapsed" data-toggle="collapse" data-parent="#example-accordion2"
+                                        <a class="collapsed" data-bs-toggle="collapse" data-parent="#example-accordion2"
                                             href="#collapse7" aria-controls="collapse7">How can I update my existing
                                             website with the most currest State Tempalte version?</a>
                                     </h4>
@@ -247,7 +247,7 @@
                             <div class="panel panel-default">
                                 <div class="panel-heading" role="tab" id="heading8">
                                     <h4 class="panel-title">
-                                        <a class="collapsed" data-toggle="collapse" data-parent="#example-accordion2"
+                                        <a class="collapsed" data-bs-toggle="collapse" data-parent="#example-accordion2"
                                             href="#collapse8" aria-controls="collapse8">Is my old website will be
                                             compatible with State template latest vesrion?</a>
                                     </h4>
@@ -265,7 +265,7 @@
                             <div class="panel panel-default">
                                 <div class="panel-heading" role="tab" id="heading9">
                                     <h4 class="panel-title">
-                                        <a class="collapsed" data-toggle="collapse" data-parent="#example-accordion2"
+                                        <a class="collapsed" data-bs-toggle="collapse" data-parent="#example-accordion2"
                                             href="#collapse9" aria-controls="collapse9">How can I get notifications
                                             about State template updates?</a>
                                     </h4>
