--- a/sample/layout-profile.html
+++ b/sample/layout-profile.html
@@ -224,7 +224,7 @@
                                 </h2>
                                 <div class="options">
                                     <button class="border-0 bg-grey-lightest bg-grey-lightest-hover" type="button"
-                                        id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
+                                        id="dropdownMenuButton" data-bs-toggle="dropdown" aria-haspopup="true"
                                         aria-expanded="false"><span class="ca-gov-icon-menu text-1-5rem color-gray"
                                             aria-hidden="true"></span><span class="sr-only">option</span></button>
 
@@ -372,7 +372,7 @@
                                     </h4>
                                     <div class="options">
                                         <button class="border-0 bg-grey-lightest bg-grey-lightest-hover" type="button"
-                                            id="dropdownMenuButton2" data-toggle="dropdown" aria-haspopup="true"
+                                            id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-haspopup="true"
                                             aria-expanded="false"><span class="ca-gov-icon-menu text-1-5rem color-gray"
                                                 aria-hidden="true"></span><span class="sr-only">option</span></button>
 
