--- a/sample/modules/ask-panel.html
+++ b/sample/modules/ask-panel.html
@@ -1,6 +1,7 @@
-
 <div class="panel">
-<a class="btn btn-primary ask-button collapsed four" role="button" data-toggle="collapse" data-parent="#askGroup" href="#button-one" aria-expanded="true" aria-controls="askHow"><span class="ca-gov-icon-online-services"></span>How</a>
+	<a class="btn btn-primary ask-button collapsed four" role="button" data-bs-toggle="collapse" data-parent="#askGroup"
+		href="#button-one" aria-expanded="true" aria-controls="askHow"><span
+			class="ca-gov-icon-online-services"></span>How</a>
 	<div id="button-one" class="collapse ask-panel">
 		<div class="ask-options">
 			<ul>
