--- a/sample/modules/form-states.html
+++ b/sample/modules/form-states.html
@@ -1,12 +1,13 @@
 <!--form states-->
-<div class="form-row">
+<div class="row">
     <div class="col-md-4 mb-3">
         <label for="validationFirstName">First name</label>
         <div class="input-group">
             <div class="input-group-prepend">
                 <span class="input-group-text"><i class="ca-gov-icon-person"></i></span>
             </div>
-            <input type="text" class="form-control" id="validationFirstName" placeholder="First name" value="Mark" disabled>
+            <input type="text" class="form-control" id="validationFirstName" placeholder="First name" value="Mark"
+                disabled>
 
         </div>
         <div class="feedback text-muted">
@@ -19,7 +20,8 @@
             <div class="input-group-prepend">
                 <span class="input-group-text is-valid"><i class="ca-gov-icon-person"></i></span>
             </div>
-            <input type="text" class="form-control is-valid" id="validationServerLastName" placeholder="Last Name" required>
+            <input type="text" class="form-control is-valid" id="validationServerLastName" placeholder="Last Name"
+                required>
             <div class="valid-feedback">
                 Looks Good.
             </div>
@@ -31,7 +33,8 @@
             <div class="input-group-prepend">
                 <span class="input-group-text is-invalid"><i class="ca-gov-icon-person"></i></span>
             </div>
-            <input type="text" class="form-control is-invalid" id="validationServerUsername" placeholder="Username" required>
+            <input type="text" class="form-control is-invalid" id="validationServerUsername" placeholder="Username"
+                required>
             <div class="invalid-feedback">
                 Please choose a username.
             </div>
