--- a/sample/modules/tabs-sidebar.html
+++ b/sample/modules/tabs-sidebar.html
@@ -1,9 +1,9 @@
 <div class="tab-group">
     <!-- Nav tabs - NOTE: UNIQUE ID IS REQUIRED -->
     <ul id="sideTabs" class="nav nav-tabs" role="tablist">
-        <li class="active"><a href="#facebookTab" role="tab" data-toggle="tab">Facebook</a></li>
-        <li><a href="#twitterTab" role="tab" data-toggle="tab">Twitter</a></li>
-        <li><a href="#youtubeTab" role="tab" data-toggle="tab">Youtube</a></li>
+        <li class="active"><a href="#facebookTab" role="tab" data-bs-toggle="tab">Facebook</a></li>
+        <li><a href="#twitterTab" role="tab" data-bs-toggle="tab">Twitter</a></li>
+        <li><a href="#youtubeTab" role="tab" data-bs-toggle="tab">Youtube</a></li>
     </ul>
     <!-- Tab panes -->
     <div class="tab-content">
