--- a/sample/modules/toggle.html
+++ b/sample/modules/toggle.html
@@ -1,8 +1,10 @@
 <!-- Example with link -->
-<a href="#collapse-example" class="btn btn-default toggle-more" role="button" data-toggle="collapse" aria-expanded="false" aria-controls="collapse-example">Toggle with Link</a> 
+<a href="#collapse-example" class="btn btn-default toggle-more" role="button" data-bs-toggle="collapse"
+    aria-expanded="false" aria-controls="collapse-example">Toggle with Link</a>
 
 <!-- Example with button -->
-<button class="btn btn-default toggle-more" type="button" data-toggle="collapse" aria-expanded="false" aria-controls="collapse-example" data-target=".collapse-example">Toggle With Button</button> 
+<button class="btn btn-default toggle-more" type="button" data-bs-toggle="collapse" aria-expanded="false"
+    aria-controls="collapse-example" data-bs-target=".collapse-example">Toggle With Button</button>
 
 <div class="collapse collapse-example" id="collapse-example">
     Collapsed content here...
