--- a/sample/tabs.html
+++ b/sample/tabs.html
@@ -107,7 +107,7 @@
                             <code>.nav</code> base class. Tabs also uses HTML5 roles for accessibility.
                             Add <code>role="tablist"</code> to the ul that contains the tab links,
                             and add <code>role="tab"</code> to the anchor tag that is the tab link.
-                            The tab link also requires an HTML5 <code>data-toggle="tab"</code> attribute
+                            The tab link also requires an HTML5 <code>data-bs-toggle="tab"</code> attribute
                             be applied to instantiate the javascript behavior.
                         </p>
                         </p>
