--- a/sample/toggle.html
+++ b/sample/toggle.html
@@ -77,7 +77,8 @@
                         </ul>
 
                         <p>You can use a link with the <code>href</code> attribute, or a button with the
-                            <code>data-target</code> attribute. In both cases, the <code>data-toggle="collapse"</code>
+                            <code>data-target</code> attribute. In both cases, the
+                            <code>data-bs-toggle="collapse"</code>
                             is required.
                         </p>
 
