--- a/search-directory.html
+++ b/search-directory.html
@@ -87,7 +87,7 @@
                         <div class="quarter">
                             <a href="#agencyFilters"
                                 class="btn btn-secondary filter-toggle toggle-more m-y btn-block-xs" role="button"
-                                data-toggle="collapse" data-parent="#agencyFilters" aria-expanded="false"
+                                data-bs-toggle="collapse" data-parent="#agencyFilters" aria-expanded="false"
                                 aria-controls="agencyFilters"><span class="toggle-more">Show Filters <span
                                         class="ca-gov-icon-filter" aria-hidden="true"></span></span></a>
                         </div>
@@ -205,7 +205,7 @@
                                 </div>
                             </div>
                             <div class="card-block text-center">
-                                <button data-toggle="collapse" data-target=".collapse1234"
+                                <button data-bs-toggle="collapse" data-bs-target=".collapse1234"
                                     class="border-0 bg-transparent">
                                     <span class="toggle-more m-0"></span><span class="sr-only">Open</span>
                                 </button>
@@ -274,7 +274,7 @@
                                 </div>
                             </div>
                             <div class="card-block text-center">
-                                <button data-toggle="collapse" data-target=".collapse1235"
+                                <button data-bs-toggle="collapse" data-bs-target=".collapse1235"
                                     class="border-0 bg-transparent">
                                     <span class="toggle-more m-0"></span><span class="sr-only">Open</span>
                                 </button>
