--- a/service-directory.html
+++ b/service-directory.html
@@ -89,7 +89,7 @@
                         <div class="quarter">
                             <a href="#serviceFilters"
                                 class="btn btn-secondary filter-toggle toggle-more m-y btn-block-xs" role="button"
-                                data-toggle="collapse" data-parent="#serviceFilters" aria-expanded="false"
+                                data-bs-toggle="collapse" data-parent="#serviceFilters" aria-expanded="false"
                                 aria-controls="serviceFilters"><span class="toggle-more">Show Filters <span
                                         class="ca-gov-icon-filter" aria-hidden="true"></span></span></a>
                         </div>
@@ -215,9 +215,9 @@
                                     </div>
                                 </div>
                                 <div class="card-block text-center">
-                                    <a href="javascript:;" role="button" data-toggle="collapse"
+                                    <a href="javascript:;" role="button" data-bs-toggle="collapse"
                                         data-parent="#collapse1234" aria-expanded="false" aria-controls="collapse1234"
-                                        data-target=".collapse1234">
+                                        data-bs-target=".collapse1234">
                                         <span class="toggle-more"></span><span class="sr-only">Open</span>
                                     </a>
                                 </div>
