--- a/ssi/branding-full-width-icons.html
+++ b/ssi/branding-full-width-icons.html
@@ -1,4 +1,4 @@
- <!-- Utility header branding (goes with full width navigation with icons) -->
+<!-- Utility header branding (goes with full width navigation with icons) -->
 <div class="utility-header">
     <div class="container">
         <div class="header-cagov-logo"><a href="/"><img src="/images/Ca-Gov-Logo-Gold.svg" alt="CA.gov"></a></div>
@@ -18,7 +18,8 @@
         <div class="settings-links">
             <ul class="utility-links">
                 <li><a href="/contact.html">Contact Us</a></li>
-                <li><button id="settings-btn" data-toggle="collapse" href="#siteSettings" aria-expanded="false"><span class="ca-gov-icon-gear" aria-hidden="true"></span> Settings</button></li>
+                <li><button id="settings-btn" data-bs-toggle="collapse" href="#siteSettings" aria-expanded="false"><span
+                            class="ca-gov-icon-gear" aria-hidden="true"></span> Settings</button></li>
             </ul>
         </div>
     </div>
