--- a/ssi/service-card.html
+++ b/ssi/service-card.html
@@ -39,8 +39,8 @@
 
     <!-- Expands two different zones in the card. Hence the use of data-target targeting a class instead on an ID  -->
     <div class="p-b text-center">
-        <a href="#collapse1234" role="button" data-toggle="collapse" data-parent="#collapse1234" aria-expanded="false"
-            aria-controls="collapse1234" data-target=".collapse1234">
+        <a href="#collapse1234" role="button" data-bs-toggle="collapse" data-parent="#collapse1234"
+            aria-expanded="false" aria-controls="collapse1234" data-bs-target=".collapse1234">
             <span class="toggle-more"></span><span class="sr-only">Open</span></a>
     </div>
 </div>
