--- a/sample/blurbs.html
+++ b/sample/blurbs.html
@@ -86,22 +86,24 @@ Based on Twitter Bootstrap
 
                 <!--#include virtual="/sample/modules/blurb-no-margin.html" -->
                 <!-- Trigger the modal with a button -->
-                <button type="button" class="btn btn-default btn-sm m-t-md" data-toggle="modal"
-                    data-target="#icon-blocks">Show Source Code</button>
+                <button type="button" class="btn btn-default btn-sm m-t-md" data-bs-toggle="modal"
+                    data-bs-target="#icon-blocks">Show Source Code</button>
                 <!-- Modal -->
                 <div class="modal fade" id="icon-blocks" role="dialog">
                     <div class="modal-dialog modal-lg">
                         <div class="modal-content">
                             <div class="modal-header">
                                 <h4 class="modal-title">HTML Markup</h4>
-                                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                <button type="button" class="close btn btn-secondary" data-bs-dismiss="modal"><span
+                                        class="sr-only">Close modal</span><span class="ca-gov-icon-close-mark"
+                                        aria-hidden="true"></span></button>
                             </div>
                             <div class="modal-body">
                                 <strong aria-label="Source Code for Icon Blocks">Source Code:</strong>
                                 <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/blurb-no-margin.html" --></code></pre>
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-default" data-bs-dismiss="modal">Close</button>
                             </div>
                         </div>
                     </div>
@@ -115,8 +117,8 @@ Based on Twitter Bootstrap
                     <h2>Left justified </h2>
                     <!--#include virtual="/sample/modules/blurb-left-justified.html" -->
 
-                    <button type="button" class="btn btn-default btn-sm m-t-md" data-toggle="modal"
-                        data-target="#icon-link">Show Source Code</button>
+                    <button type="button" class="btn btn-default btn-sm m-t-md" data-bs-toggle="modal"
+                        data-bs-target="#icon-link">Show Source Code</button>
 
 
 
@@ -126,14 +128,16 @@ Based on Twitter Bootstrap
                             <div class="modal-content">
                                 <div class="modal-header">
                                     <h4 class="modal-title">HTML Markup</h4>
-                                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                    <button type="button" class="close btn btn-secondary" data-bs-dismiss="modal"><span
+                                            class="sr-only">Close modal</span><span class="ca-gov-icon-close-mark"
+                                            aria-hidden="true"></span></button>
                                 </div>
                                 <div class="modal-body">
                                     <strong aria-label="Source Code for Icon Links">Source Code:</strong>
                                     <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/blurb-left-justified.html" --></code></pre>
                                 </div>
                                 <div class="modal-footer">
-                                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                    <button type="button" class="btn btn-default" data-bs-dismiss="modal">Close</button>
                                 </div>
                             </div>
                         </div>
@@ -152,22 +156,24 @@ Based on Twitter Bootstrap
 
                 <!--#include virtual="/sample/modules/icon-image-blocks.html" -->
                 <!-- Trigger the modal with a button -->
-                <button type="button" class="btn btn-default btn-sm" data-toggle="modal"
-                    data-target="#icon-image-blocks">Show Source Code</button>
+                <button type="button" class="btn btn-default btn-sm" data-bs-toggle="modal"
+                    data-bs-target="#icon-image-blocks">Show Source Code</button>
                 <!-- Modal -->
                 <div class="modal fade" id="icon-image-blocks" role="dialog">
                     <div class="modal-dialog modal-lg">
                         <div class="modal-content">
                             <div class="modal-header">
                                 <h4 class="modal-title">HTML Markup</h4>
-                                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                <button type="button" class="close btn btn-secondary" data-bs-dismiss="modal"><span
+                                        class="sr-only">Close modal</span><span class="ca-gov-icon-close-mark"
+                                        aria-hidden="true"></span></button>
                             </div>
                             <div class="modal-body">
                                 <strong aria-label="Source Code for Icon Image Blocks">Source Code:</strong>
                                 <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/icon-image-blocks.html" --></code></pre>
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-default" data-bs-dismiss="modal">Close</button>
                             </div>
                         </div>
                     </div>
@@ -185,8 +191,8 @@ Based on Twitter Bootstrap
                     <h2>Icons with rounded corners</h2>
                     <!--#include virtual="/sample/modules/blurb-rounded-corners-icon.html" -->
 
-                    <button type="button" class="btn btn-default btn-sm m-t-md" data-toggle="modal"
-                        data-target="#blurb-rounded">Show Source Code</button>
+                    <button type="button" class="btn btn-default btn-sm m-t-md" data-bs-toggle="modal"
+                        data-bs-target="#blurb-rounded">Show Source Code</button>
 
 
 
@@ -196,14 +202,16 @@ Based on Twitter Bootstrap
                             <div class="modal-content">
                                 <div class="modal-header">
                                     <h4 class="modal-title">HTML Markup</h4>
-                                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                    <button type="button" class="close btn btn-secondary" data-bs-dismiss="modal"><span
+                                            class="sr-only">Close modal</span><span class="ca-gov-icon-close-mark"
+                                            aria-hidden="true"></span></button>
                                 </div>
                                 <div class="modal-body">
                                     <strong aria-label="Source Code for Icon Links">Source Code:</strong>
                                     <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/blurb-rounded-corners-icon.html" --></code></pre>
                                 </div>
                                 <div class="modal-footer">
-                                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                    <button type="button" class="btn btn-default" data-bs-dismiss="modal">Close</button>
                                 </div>
                             </div>
                         </div>
