--- a/sample/contact-widgets.html
+++ b/sample/contact-widgets.html
@@ -77,10 +77,10 @@ Based on Twitter Bootstrap
 
                             <div class="tab-group">
                                 <ul id="sourceCode" class="nav nav-tabs" role="tablist">
-                                    <li class="active"><a href="#cardhtml" role="tab" data-toggle="tab"
+                                    <li class="active"><a href="#cardhtml" role="tab" data-bs-toggle="tab"
                                             aria-label="HTML Markup for Example Within Card"><strong>HTML
                                                 Markup</strong></a></li>
-                                    <li><a href="#cardmicrodata" role="tab" data-toggle="tab"
+                                    <li><a href="#cardmicrodata" role="tab" data-bs-toggle="tab"
                                             aria-label="Microdata for Example Within Card"><strong>Microdata</strong></a>
                                     </li>
                                 </ul>
@@ -109,11 +109,11 @@ Based on Twitter Bootstrap
                             <div class="tab-group">
                                 <ul id="sourceCode2" class="nav nav-tabs" role="tablist">
                                     <li class="nav-item"><a class="nav-link active" href="#html" role="tab"
-                                            data-toggle="tab" aria-selected="true"
+                                            data-bs-toggle="tab" aria-selected="true"
                                             aria-label="HTML Markup for Example Without Card"><strong>HTML
                                                 Markup</strong></a></li>
                                     <li class="nav-item"><a class="nav-link" href="#microdata" role="tab"
-                                            data-toggle="tab" aria-selected="false"
+                                            data-bs-toggle="tab" aria-selected="false"
                                             aria-label="Microdata for Example Without Card"><strong>Microdata</strong></a>
                                     </li>
                                 </ul>
