--- a/sample/event-list.html
+++ b/sample/event-list.html
@@ -91,9 +91,9 @@ Based on Twitter Bootstrap
 
                 <div class="tab-group">
                     <ul id="sourceCode" class="nav nav-tabs" role="tablist">
-                        <li class="active"><a href="#html" role="tab" data-toggle="tab"
+                        <li class="active"><a href="#html" role="tab" data-bs-toggle="tab"
                                 aria-label="HTML Markup for Event List">HTML Markup</a></li>
-                        <li><a href="#microdata" role="tab" data-toggle="tab"
+                        <li><a href="#microdata" role="tab" data-bs-toggle="tab"
                                 aria-label="Microdata for Event List">Microdata</a></li>
                     </ul>
                     <!-- Tab panes -->
@@ -126,9 +126,9 @@ Based on Twitter Bootstrap
 
                 <div class="tab-group">
                     <ul id="sourceCodeThumb" class="nav nav-tabs" role="tablist">
-                        <li class="active"><a href="#thumbhtml" role="tab" data-toggle="tab"
+                        <li class="active"><a href="#thumbhtml" role="tab" data-bs-toggle="tab"
                                 aria-label="HTML Markup for Event List with Thumbnails">HTML Markup</a></li>
-                        <li><a href="#thumbmicrodata" role="tab" data-toggle="tab"
+                        <li><a href="#thumbmicrodata" role="tab" data-bs-toggle="tab"
                                 aria-label="Microdata for Event List with Thumbnails">Microdata</a></li>
                     </ul>
                     <!-- Tab panes -->
