--- a/sample/hero-info.html
+++ b/sample/hero-info.html
@@ -77,8 +77,8 @@ Based on Twitter Bootstrap
 
 
 
-                <button type="button" class="btn btn-default btn-sm" data-toggle="modal"
-                    data-target="#news-headlines">Show Source Code</button>
+                <button type="button" class="btn btn-default btn-sm" data-bs-toggle="modal"
+                    data-bs-target="#news-headlines">Show Source Code</button>
 
                 <!-- Modal -->
                 <div class="modal fade" id="news-headlines" role="dialog">
@@ -86,7 +86,9 @@ Based on Twitter Bootstrap
                         <div class="modal-content">
                             <div class="modal-header">
                                 <h4 class="modal-title">HTML Markup</h4>
-                                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                <button type="button" class="close btn btn-secondary" data-bs-dismiss="modal"><span
+                                        class="sr-only">Close modal</span><span class="ca-gov-icon-close-mark"
+                                        aria-hidden="true"></span></button>
 
                             </div>
                             <div class="modal-body">
@@ -94,7 +96,7 @@ Based on Twitter Bootstrap
                                 <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/hero-info.html" --></code></pre>
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-default" data-bs-dismiss="modal">Close</button>
                             </div>
                         </div>
                     </div>
