--- a/sample/icon-blocks.html
+++ b/sample/icon-blocks.html
@@ -91,15 +91,17 @@ Based on Twitter Bootstrap
 
                             <!--#include virtual="/sample/modules/icon-blocks.html" -->
                             <!-- Trigger the modal with a button -->
-                            <button type="button" class="btn btn-default btn-sm" data-toggle="modal"
-                                data-target="#icon-blocks">Show Source Code</button>
+                            <button type="button" class="btn btn-default btn-sm" data-bs-toggle="modal"
+                                data-bs-target="#icon-blocks">Show Source Code</button>
                             <!-- Modal -->
                             <div class="modal fade" id="icon-blocks" role="dialog">
                                 <div class="modal-dialog modal-lg">
                                     <div class="modal-content">
                                         <div class="modal-header">
                                             <h4 class="modal-title">HTML Markup</h4>
-                                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                            <button type="button" class="close btn btn-secondary"
+                                                data-bs-dismiss="modal"><span class="sr-only">Close modal</span><span
+                                                    class="ca-gov-icon-close-mark" aria-hidden="true"></span></button>
                                         </div>
                                         <div class="modal-body">
                                             <strong aria-label="Source Code for Icon Blocks">Source Code:</strong>
@@ -107,7 +109,7 @@ Based on Twitter Bootstrap
                                         </div>
                                         <div class="modal-footer">
                                             <button type="button" class="btn btn-default"
-                                                data-dismiss="modal">Close</button>
+                                                data-bs-dismiss="modal">Close</button>
                                         </div>
                                     </div>
                                 </div>
@@ -123,15 +125,17 @@ Based on Twitter Bootstrap
 
                             <!--#include virtual="/sample/modules/icon-image-blocks.html" -->
                             <!-- Trigger the modal with a button -->
-                            <button type="button" class="btn btn-default btn-sm" data-toggle="modal"
-                                data-target="#icon-image-blocks">Show Source Code</button>
+                            <button type="button" class="btn btn-default btn-sm" data-bs-toggle="modal"
+                                data-bs-target="#icon-image-blocks">Show Source Code</button>
                             <!-- Modal -->
                             <div class="modal fade" id="icon-image-blocks" role="dialog">
                                 <div class="modal-dialog modal-lg">
                                     <div class="modal-content">
                                         <div class="modal-header">
                                             <h4 class="modal-title">HTML Markup</h4>
-                                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                            <button type="button" class="close btn btn-secondary"
+                                                data-bs-dismiss="modal"><span class="sr-only">Close modal</span><span
+                                                    class="ca-gov-icon-close-mark" aria-hidden="true"></span></button>
                                         </div>
                                         <div class="modal-body">
                                             <strong aria-label="Source Code for Icon Image Blocks">Source Code:</strong>
@@ -139,7 +143,7 @@ Based on Twitter Bootstrap
                                         </div>
                                         <div class="modal-footer">
                                             <button type="button" class="btn btn-default"
-                                                data-dismiss="modal">Close</button>
+                                                data-bs-dismiss="modal">Close</button>
                                         </div>
                                     </div>
                                 </div>
@@ -155,8 +159,8 @@ Based on Twitter Bootstrap
                 <div class="container">
                     <!--#include virtual="/sample/modules/icon-links.html" -->
 
-                    <button type="button" class="btn btn-default btn-sm m-t-md" data-toggle="modal"
-                        data-target="#icon-link">Show Source Code</button>
+                    <button type="button" class="btn btn-default btn-sm m-t-md" data-bs-toggle="modal"
+                        data-bs-target="#icon-link">Show Source Code</button>
 
 
                 </div>
@@ -168,14 +172,16 @@ Based on Twitter Bootstrap
                     <div class="modal-content">
                         <div class="modal-header">
                             <h4 class="modal-title">HTML Markup</h4>
-                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            <button type="button" class="close btn btn-secondary" data-bs-dismiss="modal"><span
+                                    class="sr-only">Close modal</span><span class="ca-gov-icon-close-mark"
+                                    aria-hidden="true"></span></button>
                         </div>
                         <div class="modal-body">
                             <strong aria-label="Source Code for Icon Links">Source Code:</strong>
                             <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/icon-links.html" --></code></pre>
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-default" data-bs-dismiss="modal">Close</button>
                         </div>
                     </div>
                 </div>
