--- a/sample/info-blocks.html
+++ b/sample/info-blocks.html
@@ -80,8 +80,8 @@ Based on Twitter Bootstrap
                 <div class="container p-y-lg">
                     <!--#include virtual="/sample/modules/info-blocks.html" -->
 
-                    <button type="button" class="btn btn-default btn-sm m-t-lg" data-toggle="modal"
-                        data-target="#news-headlines">Show Source Code</button>
+                    <button type="button" class="btn btn-default btn-sm m-t-lg" data-bs-toggle="modal"
+                        data-bs-target="#news-headlines">Show Source Code</button>
                 </div>
             </div>
 
@@ -98,20 +98,22 @@ Based on Twitter Bootstrap
                     <div class="modal-content">
                         <div class="modal-header">
                             <h4 class="modal-title">HTML Markup</h4>
-                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            <button type="button" class="close btn btn-secondary" data-bs-dismiss="modal"><span
+                                    class="sr-only">Close modal</span><span class="ca-gov-icon-close-mark"
+                                    aria-hidden="true"></span></button>
 
                         </div>
                         <div class="modal-body">
-                            <strong aria-label="Source code for Info Blocks">Source Code:</label>
-                                <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/info-blocks.html" --></code></pre>
+                            <strong aria-label="Source code for Info Blocks">Source Code:</strong>
+                            <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/info-blocks.html" --></code></pre>
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-default" data-bs-dismiss="modal">Close</button>
                         </div>
                     </div>
                 </div>
             </div><!-- / End Modal -->
-            <hr />
+
             <div class="container m-b-lg">
                 <h3>More News Samples</h3>
                 <ul class="list-primary">
