--- a/sample/location-widgets.html
+++ b/sample/location-widgets.html
@@ -83,9 +83,9 @@
 
                 <div class="tab-group">
                     <ul id="sourceCode" class="nav nav-tabs" role="tablist">
-                        <li class="active"><a href="#html" role="tab" data-toggle="tab"
+                        <li class="active"><a href="#html" role="tab" data-bs-toggle="tab"
                                 aria-label="HTML Markup for Contact Location">HTML Markup</a></li>
-                        <li><a href="#microdata" role="tab" data-toggle="tab"
+                        <li><a href="#microdata" role="tab" data-bs-toggle="tab"
                                 aria-label="Microdata for Contact Location">Microdata</a></li>
                     </ul>
                     <!-- Tab panes -->
@@ -111,9 +111,9 @@
 
                 <div class="tab-group">
                     <ul id="sourceCode2" class="nav nav-tabs" role="tablist">
-                        <li class="active"><a href="#minihtml" role="tab" data-toggle="tab"
+                        <li class="active"><a href="#minihtml" role="tab" data-bs-toggle="tab"
                                 aria-label="HTML Markup for Contact Mini Location">HTML Markup</a></li>
-                        <li><a href="#minimicrodata" role="tab" data-toggle="tab"
+                        <li><a href="#minimicrodata" role="tab" data-bs-toggle="tab"
                                 aria-label="Microdata for Contact Mini Location">Microdata</a></li>
                     </ul>
                     <!-- Tab panes -->
@@ -138,9 +138,9 @@
 
                     <div class="tab-group">
                         <ul id="sourceCode3" class="nav nav-tabs" role="tablist">
-                            <li class="active"><a href="#bannerhtml" role="tab" data-toggle="tab"
+                            <li class="active"><a href="#bannerhtml" role="tab" data-bs-toggle="tab"
                                     aria-label="HTML Markup for Contact Location Banner">HTML Markup</a></li>
-                            <li><a href="#bannermicrodata" role="tab" data-toggle="tab"
+                            <li><a href="#bannermicrodata" role="tab" data-bs-toggle="tab"
                                     aria-label="Microdata for Contact Location Banner">Microdata</a></li>
                         </ul>
                         <!-- Tab panes -->
