--- a/sample/modal.html
+++ b/sample/modal.html
@@ -80,7 +80,7 @@ Based on Twitter Bootstrap
                     might
                     look like this:</p>
                 <pre
-                    class="  language-markup"><code class="language-markup"><button type="button" class="btn btn-default" data-toggle="modal" data-target="#modal">Show Modal</button></code></pre>
+                    class="  language-markup"><code class="language-markup"><button type="button" class="btn btn-default" data-bs-toggle="modal" data-bs-target="#modal">Show Modal</button></code></pre>
 
                 <p>Notice the button element has two custom data attributes: <code>data-toggle</code> and
                     <code>data-target</code>. The toggle tells Bootstrap what to do and the target tells Bootstrap which
@@ -93,8 +93,8 @@ Based on Twitter Bootstrap
 
             <div class="section-default">
                 <div class="container p-b-lg text-center">
-                    <button type="button" class="btn btn-default btn-lg m-t-lg" data-toggle="modal"
-                        data-target="#news-headlines">Show Modal</button>
+                    <button type="button" class="btn btn-default btn-lg m-t-lg" data-bs-toggle="modal"
+                        data-bs-target="#news-headlines">Show Modal</button>
                 </div>
             </div>
 
@@ -111,15 +111,17 @@ Based on Twitter Bootstrap
                     <div class="modal-content">
                         <div class="modal-header">
                             <h4 class="modal-title">HTML Markup</h4>
-                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            <button type="button" class="close btn btn-secondary" data-bs-dismiss="modal"><span
+                                    class="sr-only">Close modal</span><span class="ca-gov-icon-close-mark"
+                                    aria-hidden="true"></span></button>
 
                         </div>
                         <div class="modal-body">
-                            <strong aria-label="Source code for Info Blocks">Modal Source Code:</label>
-                                <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/modal.html" --></code></pre>
+                            <strong aria-label="Source code for Info Blocks">Modal Source Code:</strong>
+                            <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/modal.html" --></code></pre>
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-default" data-bs-dismiss="modal">Close</button>
                         </div>
                     </div>
                 </div>
