--- a/sample/modules/modal.html
+++ b/sample/modules/modal.html
@@ -3,13 +3,15 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h3 class="h4 modal-title">Modal Header</h3>
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <button type="button" class="close btn btn-secondary" data-bs-dismiss="modal"><span
+                        class="sr-only">Close modal</span><span class="ca-gov-icon-close-mark"
+                        aria-hidden="true"></span></button>
             </div>
             <div class="modal-body">
                 Modal Body
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-default" data-bs-dismiss="modal">Close</button>
             </div>
         </div>
     </div>
