--- a/sample/news-blocks.html
+++ b/sample/news-blocks.html
@@ -79,15 +79,17 @@ Based on Twitter Bootstrap
                         <h2>Example:</h2>
                         <!--#include virtual="/sample/modules/news-block.html" -->
                         <!-- Trigger the modal with a button -->
-                        <button type="button" class="btn btn-default btn-sm" data-toggle="modal"
-                            data-target="#news-block">Show Source Code</button>
+                        <button type="button" class="btn btn-default btn-sm" data-bs-toggle="modal"
+                            data-bs-target="#news-block">Show Source Code</button>
                         <!-- Modal -->
                         <div class="modal fade" id="news-block" role="dialog">
                             <div class="modal-dialog modal-lg">
                                 <div class="modal-content">
                                     <div class="modal-header">
                                         <h4 class="modal-title">HTML Markup</h4>
-                                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                        <button type="button" class="close btn btn-secondary"
+                                            data-bs-dismiss="modal"><span class="sr-only">Close modal</span><span
+                                                class="ca-gov-icon-close-mark" aria-hidden="true"></span></button>
                                     </div>
                                     <div class="modal-body">
                                         <strong aria-label="Source Code for News Block">Source Code:</strong>
@@ -95,7 +97,7 @@ Based on Twitter Bootstrap
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-default"
-                                            data-dismiss="modal">Close</button>
+                                            data-bs-dismiss="modal">Close</button>
                                     </div>
                                 </div>
                             </div>
@@ -107,15 +109,17 @@ Based on Twitter Bootstrap
                     <div class="three-quarters">
                         <h2>Image News Blocks</h2>
                         <!--#include virtual="/sample/modules/news-image.html" -->
-                        <button type="button" class="btn btn-default btn-sm" data-toggle="modal"
-                            data-target="#image-blocks">Show Source Code</button>
+                        <button type="button" class="btn btn-default btn-sm" data-bs-toggle="modal"
+                            data-bs-target="#image-blocks">Show Source Code</button>
                         <!-- Modal -->
                         <div class="modal fade" id="image-blocks" role="dialog">
                             <div class="modal-dialog modal-lg">
                                 <div class="modal-content">
                                     <div class="modal-header">
                                         <h4 class="modal-title">HTML Markup</h4>
-                                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                        <button type="button" class="close btn btn-secondary"
+                                            data-bs-dismiss="modal"><span class="sr-only">Close modal</span><span
+                                                class="ca-gov-icon-close-mark" aria-hidden="true"></span></button>
                                     </div>
                                     <div class="modal-body">
                                         <strong aria-label="Source Code for News Images Blocks">Source Code:</strong>
@@ -123,7 +127,7 @@ Based on Twitter Bootstrap
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-default"
-                                            data-dismiss="modal">Close</button>
+                                            data-bs-dismiss="modal">Close</button>
                                     </div>
                                 </div>
                             </div>
