--- a/sample/news-detail.html
+++ b/sample/news-detail.html
@@ -85,8 +85,8 @@ Based on Twitter Bootstrap
                         <h2>Source Code:</h2>
                         <div class="tab-group">
                             <ul id="sourceCode" class="nav nav-tabs" role="tablist">
-                                <li class="active"><a href="#html" role="tab" data-toggle="tab">HTML Markup</a></li>
-                                <li><a href="#microdata" role="tab" data-toggle="tab">Microdata</a></li>
+                                <li class="active"><a href="#html" role="tab" data-bs-toggle="tab">HTML Markup</a></li>
+                                <li><a href="#microdata" role="tab" data-bs-toggle="tab">Microdata</a></li>
                             </ul>
                             <!-- Tab panes -->
                             <div class="tab-content responsive">
