--- a/sample/panes.html
+++ b/sample/panes.html
@@ -78,8 +78,8 @@ Based on Twitter Bootstrap
 
 
 
-                <button type="button" class="btn btn-default btn-sm m-t-md" data-toggle="modal"
-                    data-target="#panes">Show Source Code</button>
+                <button type="button" class="btn btn-default btn-sm m-t-md" data-bs-toggle="modal"
+                    data-bs-target="#panes">Show Source Code</button>
 
                 <!-- Modal -->
                 <div class="modal fade" id="panes" role="dialog">
@@ -87,7 +87,9 @@ Based on Twitter Bootstrap
                         <div class="modal-content">
                             <div class="modal-header">
                                 <h3 class="h4 modal-title">HTML Markup</h3>
-                                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                <button type="button" class="close btn btn-secondary" data-bs-dismiss="modal"><span
+                                        class="sr-only">Close modal</span><span class="ca-gov-icon-close-mark"
+                                        aria-hidden="true"></span></button>
 
                             </div>
                             <div class="modal-body">
@@ -95,7 +97,7 @@ Based on Twitter Bootstrap
                                 <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/panes.html" --></code></pre>
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-default" data-bs-dismiss="modal">Close</button>
                             </div>
                         </div>
                     </div>
