--- a/sample/progress-blocks.html
+++ b/sample/progress-blocks.html
@@ -76,15 +76,17 @@ Based on Twitter Bootstrap
                 <!--#include virtual="/sample/modules/progress-block.html" -->
 
 
-                <button type="button" class="btn btn-default btn-sm" data-toggle="modal"
-                    data-target="#progress-block">Show Source Code</button>
+                <button type="button" class="btn btn-default btn-sm" data-bs-toggle="modal"
+                    data-bs-target="#progress-block">Show Source Code</button>
                 <!-- Modal -->
                 <div class="modal fade" id="progress-block" role="dialog">
                     <div class="modal-dialog modal-lg">
                         <div class="modal-content">
                             <div class="modal-header">
                                 <h4 class="modal-title">HTML Markup</h4>
-                                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                <button type="button" class="close btn btn-secondary" data-bs-dismiss="modal"><span
+                                        class="sr-only">Close modal</span><span class="ca-gov-icon-close-mark"
+                                        aria-hidden="true"></span></button>
 
                             </div>
                             <div class="modal-body">
@@ -92,7 +94,7 @@ Based on Twitter Bootstrap
                                 <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/progress-block.html" --></code></pre>
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-default" data-bs-dismiss="modal">Close</button>
                             </div>
                         </div>
                     </div>
@@ -106,15 +108,17 @@ Based on Twitter Bootstrap
                     name to either <code>-highlight-</code>, <code>-standout-</code>, or <code>-secondary-</code>.
                     <!--#include virtual="/sample/modules/progress-block-bold.html" -->
 
-                    <button type="button" class="btn btn-default btn-sm" data-toggle="modal"
-                        data-target="#progress-block-bold">Show Source Code</button>
+                    <button type="button" class="btn btn-default btn-sm" data-bs-toggle="modal"
+                        data-bs-target="#progress-block-bold">Show Source Code</button>
                     <!-- Modal -->
                 <div class="modal fade" id="progress-block-bold" role="dialog">
                     <div class="modal-dialog modal-lg">
                         <div class="modal-content">
                             <div class="modal-header">
                                 <h4 class="modal-title">HTML Markup</h4>
-                                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                <button type="button" class="close btn btn-secondary" data-bs-dismiss="modal"><span
+                                        class="sr-only">Close modal</span><span class="ca-gov-icon-close-mark"
+                                        aria-hidden="true"></span></button>
 
                             </div>
                             <div class="modal-body">
@@ -122,7 +126,7 @@ Based on Twitter Bootstrap
                                 <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/progress-block-bold.html" --></code></pre>
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-default" data-bs-dismiss="modal">Close</button>
                             </div>
                         </div>
                     </div>
