--- a/sample/timeline.html
+++ b/sample/timeline.html
@@ -75,15 +75,17 @@ Based on Twitter Bootstrap
                 <!--#include virtual="/sample/modules/timeline.html" -->
 
 
-                <button type="button" class="btn btn-default btn-sm" data-toggle="modal"
-                    data-target="#progress-block">Show Source Code</button>
+                <button type="button" class="btn btn-default btn-sm" data-bs-toggle="modal"
+                    data-bs-target="#progress-block">Show Source Code</button>
                 <!-- Modal -->
                 <div class="modal fade" id="progress-block" role="dialog">
                     <div class="modal-dialog modal-lg">
                         <div class="modal-content">
                             <div class="modal-header">
                                 <h3 class="h4 modal-title">HTML Markup</h3>
-                                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                <button type="button" class="close btn btn-secondary" data-bs-dismiss="modal"><span
+                                        class="sr-only">Close modal</span><span class="ca-gov-icon-close-mark"
+                                        aria-hidden="true"></span></button>
 
                             </div>
                             <div class="modal-body">
@@ -91,7 +93,7 @@ Based on Twitter Bootstrap
                                 <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/timeline.html" --></code></pre>
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-default" data-bs-dismiss="modal">Close</button>
                             </div>
                         </div>
                     </div>
