--- a/ssi/branding-full-width.html
+++ b/ssi/branding-full-width.html
@@ -1,4 +1,4 @@
- <!-- branding (goes with full width navigation) -->
+<!-- branding (goes with full width navigation) -->
 <div class="branding">
     <div class="row">
         <div class="col-md-6">
@@ -17,7 +17,8 @@
         <div class="col-md-6">
             <div class="float-right font-size-12 p-r">
                 <a class="m-r-md" href="/contact.html">Contact Us</a>
-                <a id="settings-btn" data-toggle="collapse" href="#siteSettings"><span class="ca-gov-icon-gear" aria-hidden="true"></span> Settings</a>
+                <a id="settings-btn" data-bs-toggle="collapse" href="#siteSettings"><span class="ca-gov-icon-gear"
+                        aria-hidden="true"></span> Settings</a>
             </div>
         </div>
     </div>
