--- a/ssi/search-results.html
+++ b/ssi/search-results.html
@@ -10,14 +10,15 @@
                 <div class="col-md-8">
                     <ul id="searchAreaTabs" class="nav nav-pills btn-row">
                         <li class="active"><a href="#search-all-cagov" class="btn btn-secondary"
-                                data-target="#search-all-cagov, #search-all-cagov-filters" data-toggle="tab">All
+                                data-bs-target="#search-all-cagov, #search-all-cagov-filters" data-bs-toggle="tab">All
                                 CA.Gov</a></li>
                         <li><a href="#search-services-filters" class="btn btn-secondary"
-                                data-target="#search-services, #search-services-filters" data-toggle="tab">Services</a>
+                                data-bs-target="#search-services, #search-services-filters"
+                                data-bs-toggle="tab">Services</a>
                         </li>
                         <li><a href="#search-locations-filter" class="btn btn-secondary"
-                                data-target="#search-locations, #search-locations-filter"
-                                data-toggle="tab">Locations</a></li>
+                                data-bs-target="#search-locations, #search-locations-filter"
+                                data-bs-toggle="tab">Locations</a></li>
                     </ul>
                 </div>
 
@@ -34,9 +35,9 @@
                         <div class="col-md-4">
                             <a href="#serviceFilters"
                                 class="btn btn-secondary m-b toggle-more filter-toggle btn-block-xs float-right active"
-                                role="button" data-toggle="collapse" data-parent="#serviceFilters" aria-expanded="false"
-                                aria-controls="serviceFilters">Service Filters <span class="ca-gov-icon-filter"
-                                    aria-hidden="true"></span></a>
+                                role="button" data-bs-toggle="collapse" data-parent="#serviceFilters"
+                                aria-expanded="false" aria-controls="serviceFilters">Service Filters <span
+                                    class="ca-gov-icon-filter" aria-hidden="true"></span></a>
                         </div>
 
                         <!-- FILTERS FOR SERVICES -->
@@ -73,7 +74,7 @@
                         <div class="col-md-4">
                             <a href="#locationFilters"
                                 class="btn btn-secondary m-b toggle-more filter-toggle btn-block-xs float-right active"
-                                role="button" data-toggle="collapse" data-parent="#locationFilters"
+                                role="button" data-bs-toggle="collapse" data-parent="#locationFilters"
                                 aria-expanded="false" aria-controls="locationFilters">Location Filters <span
                                     class="ca-gov-icon-filter" aria-hidden="true"></span></a>
                         </div>
